<resources>
    <string name="app_name">Orar IESC</string>

    <string name="title_section1">Orar</string>
    <string name="title_section2">Despre noi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">+</string>

    <string name="action_settings">Setări</string>
    <string name="title_activity_settings">Setări</string>
    <string name="settings_greetings">Bine ai venit la setari!</string>

    <!--Strings pentru despre-->
    <string name="header_despre">Aplicatie dezvoltată de:</string>
    <string name="continut_despre_1">Cristian Palcău si Tudor Vlad \n \n Pentru sugestii, opinii si reclamaţii ne puteţi scrie un e-mail la una din adresele: </string>
    <string name="email_despre1">Email Cristian: palcau.cristi@gmail.com</string>
    <string name="email_despre2">Email Tudor: tudor.vlad@infoexcel.edu.ro</string>
    <string name="footer_despre">Orar Universitatea Transilvania Brasov \n Inginerie Electrică si Ştiinţa Calculatoarelor \n©2015</string>
    <string name="ziua_orar">Ziua</string>
</resources>
