<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"

    android:background="#ff029789">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/header_despre"
        android:id="@+id/textAbout"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continut_despre_1"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="#fffafafa"
        android:gravity="center"
        android:layout_above="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/email_despre1"
        android:autoLink="email"
        android:textColorLink="#fffafafa"
        android:textColor="#ffb9b9b9"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_despre2"
        android:autoLink="email"
        android:textColorLink="#fffafafa"
        android:textColor="#ffb9b9b9"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:gravity="center"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:textSize="17sp"
        android:text="@string/footer_despre"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffebebeb" />



</RelativeLayout>
